--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
             <div class="back">
                 <div class="inner">
                     <div class="description">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae, accusamus.</p>
-                            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptates earum nostrum ipsam
-                                ullam, reiciendis nam consectetur? Doloribus voluptate architecto possimus perferendis
-                                tenetur nemo amet temporibus, enim soluta nam, debitis.</p>
+                        <div class="description">
+    <p><strong>Centrally Located Studio:</strong> Charming apartment just steps from the Palace of Culture. Walking distance to metro and cafes.</p>
+    <p>Includes fast WiFi, a fully equipped kitchenette, and self check-in. Perfect for couples or solo travelers exploring the city.</p>
+                        </div>
                     </div>
                     <label for="card1" class="button return" aria-hidden="true">
                         <i class="fas fa-arrow-left"></i> Return
@@ -76,10 +76,8 @@
             <div class="back">
                  <div class="inner">
                     <div class="description">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae, accusamus.</p>
-                            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptates earum nostrum ipsam
-                                ullam, reiciendis nam consectetur? Doloribus voluptate architecto possimus perferendis
-                                tenetur nemo amet temporibus, enim soluta nam, debitis.</p>
+                        <p><strong>Modern City Flat:</strong> Sleek design in the heart of the Jewish Quarter (Kazimierz). Surrounded by the best restaurants.</p>
+    <p>Features a dedicated workspace with ergonomic chair, 4K Smart TV, and Nespresso machine. Ideal for digital nomads.</p>
                     </div>
                     <label for="card2" class="button return" aria-hidden="true">
                         <i class="fas fa-arrow-left"></i> Return
@@ -115,10 +113,8 @@
             <div class="back">
                  <div class="inner">
                     <div class="description">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae, accusamus.</p>
-                            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptates earum nostrum ipsam
-                                ullam, reiciendis nam consectetur? Doloribus voluptate architecto possimus perferendis
-                                tenetur nemo amet temporibus, enim soluta nam, debitis.</p>
+                        <p><strong>Premium Waterfront Suite:</strong> Experience luxury with a stunning view of the Motława River and the famous Crane.</p>
+    <p>Guests enjoy access to a private spa, gym, and underground parking. The ultimate coastal getaway for families or groups.</p>
                     </div>
                     <label for="card3" class="button return" aria-hidden="true">
                         <i class="fas fa-arrow-left"></i> Return
